<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/switch1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp">

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="48dp"
                    android:text="@string/switch2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp">

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="48dp"
                    android:text="@string/switch3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp">

                <Switch
                    android:id="@+id/switch4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="48dp"
                    android:text="@string/switch4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp">

                <Switch
                    android:id="@+id/switch5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="48dp"
                    android:text="@string/switch5" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>
